# quantum_platform

./: .gitignore  Makefile  dev.sh  docker-compose.yml  requirements.txt
docs/: deverred_work.md
docs/algoritms/: grover.md  qft_qpe.md  testing.md  vqe.md
docs/architecture/: kafka.md  messaging.md  orchestration.md  postgres.md
scripts/: README.md  observe.py  requirements.txt
services/api/: README.md  alembic.ini  requirements.txt
services/api/app/: db.py  deps.py  execution.py  main.py
services/api/migrations/: env.py
services/api/tests/: conftest.py  test_dashboard_api.py  test_experiments_router.py  test_results_consumer.py  test_store.py  test_validation.py
services/orchestrator/: Dockerfile  README.md  requirements.txt
services/orchestrator/app/: retry_policy.py  worker.py
services/quantum-core/: README.md  demo_aer.py  demo_grover.py  demo_polling.py  demo_qpe.py  demo_sat_grover.py  demo_vqe.py  pyproject.toml  requirements.txt
services/quantum-core/quantum_core/: execution.py  tasks.py
services/quantum-core/quantum_core/algorithms/: grover.py  qft.py  qft_qpe.py  qpe.py  sat_search.py  vqe.py
services/quantum-core/quantum_core/backends/: aer_backend.py  mock_hw_backend.py
services/quantum-core/quantum_core/loops/: vqe_loop.py
services/quantum-core/quantum_core/sync/: polling.py
services/quantum-core/tests/unit/: conftest.py  fakes.py  test_circuit_breaker.py  test_wait_for_result.py
services/stream-analytics/: requirements.txt
services/stream-analytics/app/: consumer.py  faust_app.py  rolling.py
(+15 files in other folders)
